--- a/src/components/EditorPage/Profile/Profile.module.scss
+++ b/src/components/EditorPage/Profile/Profile.module.scss
@@ -4,6 +4,7 @@
   height: calc(100% - 48px);
   background: #f2f2f2;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: block !important;
 }
 
 .profile__settings {
