--- a/src/components/EditorPage/Sidebar/Sidebar.module.scss
+++ b/src/components/EditorPage/Sidebar/Sidebar.module.scss
@@ -10,7 +10,7 @@
   padding: 0;
 }
 
-.sidebar__list_item {
+.sidebar__listItem {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -30,7 +30,7 @@
   }
 }
 
-.sidebar__list_itemActive {
+.sidebar__listItemActive {
   display: flex;
   align-items: center;
   gap: 20px;
